--- a/content/index.mdx
+++ b/content/index.mdx
@@ -1,30 +1,14 @@
 ---
-title: "Landing Page"
+title: "Resource Guides"
 ---
 
-Some introduction text. Lists out all the headings from h1 to h6. Easy to customise. Some more text. Additional text.
+This guide provides an introduction to the resources for the study of Russia, Eurasia, and Eastern Europe available at Duke University Libraries.
 
-# Heading H1
-Heading 1 text
-
-## Heading H2
-Heading 2 text
-
-### Heading H3
-Heading 3 text
-
-#### Heading H4
-Heading 4 text
-
-##### Heading H5
-Heading 5 text
-
-###### Heading H6
-Heading 6 text
-
-## Lists
-- Item 1
-- Item 2
-- Item 3
-- Item 4
-- Item 5
+<div class="card rounded overflow-hidden shadow-lg">
+  <div>
+    <div class="font-bold theme-accent-bg p-4">Key References</div>
+    <p class="text-gray-700 text-base p-4 mb-0">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia, nulla! Maiores et perferendis eaque, exercitationem praesentium nihil.
+    </p>
+  </div>
+</div>
