--- a/content/index.mdx
+++ b/content/index.mdx
@@ -4,7 +4,7 @@ title: "Resource Guides"
 
 This guide provides an introduction to the resources for the study of Russia, Eurasia, and Eastern Europe available at Duke University Libraries.
 
-<div class="card rounded overflow-hidden shadow-lg">
+<div class="card rounded overflow-hidden shadow">
   <div>
     <div class="font-bold theme-accent-bg p-4">Key References</div>
     <p class="text-gray-700 text-base p-4 mb-0">
